package ru.itmo.lab5.model;

/**
 * Отделка квартиры.
 */
public enum Furnish {
    DESIGNER,
    FINE,
    BAD,
    LITTLE
}
