package ru.itmo.lab5.model;

/**
 * Транспортная доступность.
 */
public enum Transport {
    FEW,
    LITTLE,
    NORMAL,
    ENOUGH
}
