package ru.itmo.lab5.model;

/**
 * Вид из окна.
 */
public enum View {
    STREET,
    YARD,
    BAD,
    NORMAL
}
